# fridgventory

./: .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  docker-compose.prod.yml  docker-compose.yml
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: ci.yml  deploy.yml  release.yml
backend/: .env.example  CLAUDE.md  alembic.ini  pyproject.toml
backend/app/: config.py  database.py  dependencies.py  main.py
backend/app/api/v1/: dependencies.py
backend/app/api/v1/routes/: auth.py  households.py  items.py  recipes.py
backend/app/models/: __init__.py  household.py  item.py  notification.py  user.py
backend/app/repositories/: household_repository.py  item_repository.py  user_repository.py
backend/app/schemas/: auth.py  household.py  item.py  recipe.py  user.py
backend/app/services/: auth_service.py  household_service.py  item_service.py  recipe_service.py  rescue_recipe_service.py
backend/app/workers/: expiry_worker.py
backend/migrations/: env.py
backend/migrations/versions/: 0001_initial.py
backend/tests/: conftest.py  test_auth.py  test_households.py  test_items.py  test_rescue_recipes.py
design-system/fridgecheck/: MASTER.md
docker/api/: Dockerfile
docker/frontend/: Dockerfile
docker/nginx/: nginx.conf
docker/worker/: Dockerfile
docs/: ARCHITECTURE.md  api-reference.md  development-workflow.md  glossary.md  onboarding.md
docs/research/: 00-codebase-map.md  (+6 more)
frontend/: CLAUDE.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts  vitest.config.ts
terraform/: README.md
(+95 files in other folders)
